# STRATUM

./: .gitignore  GEMINI.MD  README.md  clinical_registry_master.csv  pyproject.toml  stratum_server.py
data/bronze/imaging/: sub-001_ses-01_MRS.json  sub-001_ses-01_task-rest_bold.json
data/gold/: gold_multimodal_cohort.csv
data/silver/: test_structural.json
legacy/analysis/: clinical-analysis_orchestrator.py  clinical-pipeline_orchestrator.py
scripts/: compile_registry.py
scripts/generators/: create_fmri_samples.py  create_omics_samples.py  create_survey_bio_samples.py  create_test_nifti.py  create_wearables_nlp_samples.py
scripts/setup/: system_init.py
src/python/analysis/: cohort_explorer.py  run_sample_analysis.py
src/python/core/: bids_validator.py  converter.py  discovery.py  engine.py  harmonizer.py  pii_deidentifier.py  quality_report.py  query.py
src/python/data_dictionary/: clinical-metadata_suggester.py  clinical-privacy_redactor.py  registry_integrity_check.py
src/python/plugins/: biospecimens.py  clinical_assessments.py  clinical_nlp.py  converter_dicom_to_bids.py  converter_edf_to_bids.py  converter_nibabel.py  eeg_bids.py  eeg_mne.py  ehr_fhir.py  fmri_nilearn.py  imaging_bids.py  multi_omics.py  wearables.py
src/python/variables/: clinical-bids_harmonizer.py  clinical-fhir_harmonizer.py  clinical-variables_list.py  clinical_variables_gather.py  generate_test_data.py
