[project]
name = "stratum-agent-interface"
version = "0.1.0"
description = "STRATUM: Agent-driven orchestration of multimodal clinical data (MCP Server)."
authors = [
    { name = "STRATUM Contributors" }
]
dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=0.4.1",
    "pandas>=2.0.0",
    "nibabel>=5.0.0",
    "nilearn>=0.10.0"
]
requires-python = ">=3.11"

[project.scripts]
stratum-server = "stratum_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
